SinglePage/static/css/style.css
/*General*/
html, body {
    margin: 0;
    padding: 0;
}

body {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 18px;
}

footer {
    margin-top: 5%;
    color: black;
}

.page-background {
    background-color: #E6EDF2;
}

.page-header {
    color: #004B8B;
}

/*Card*/
.card-header {
    background: #004B8B;
}

.btn-accept-terms {
    cursor: pointer;
    color: white !important;
    background-color: #004B8B;
}

.btn-next {
    cursor: pointer;
    color: white !important;
    background-color: #004B8B;
}

.btn-yes {
    cursor: pointer;
    color: white !important;
    background-color: #5cb85c;
}

.btn-no {
    cursor: pointer;
    color: white !important;
    background-color: #d9534f;
}

.container > img {
    max-width: 60%;
    max-height: 60%;
}

@media only screen and (max-width: 768px) {
    .container > img {
        max-width: 100%;
        max-height: 100%;
    }
}

/*Progressbar*/
.progress {
    border-radius: 0rem;
}

.progress-bar {
    background-color: #006dcc;
}

/*Scales*/
label>input{
    cursor: pointer;
}

@media only screen and (min-width: 992px) {
    .scaleIMI {
        border: 0px;
        width: 13%;
        height: 1em;
    }

    .wrap .likert:before {
        width: 81%;
    }
}

@media only screen and (max-width: 991px) and (min-width: 768px) {
    .wrap .likert:before {
        width: 82%;
    }

    .wrap .statement {
        font-size: 17px;
    }

    .wrap .likert {
        font-size: 15px !important;
    }
}

@media only screen and (max-width: 767px) and (min-width: 535px) {
    .wrap .likert:before {
        width: 82%;
    }

    .wrap .statement {
        font-size: 15px;
    }

    .wrap .likert {
        font-size: 12.5px !important;
    }
}

@media only screen and (max-width: 534px) {
    .wrap .likert:before {
        width: 86%;
    }

    .wrap .statement {
        font-size: 14px;
    }

    .wrap .likert {
        font-size: 12px !important;
    }
}

.imiLabel{
    display: inline-block;
    cursor: pointer;
}

h1.likert-header {
    padding-left: 4.25%;
    margin: 20px 0 0;
}

.wrap .statement {
    display: block;
    font-weight: bold;
    padding: 15px 0 0 0;
    margin-bottom: 10px;
}

.wrap .likert {
    list-style: none;
    width: 100%;
    margin: 0;
    padding: 0 0 15px;
    display: block;
    border-bottom: 2px solid #efefef;
}

.wrap .likert:last-of-type {
    border-bottom: 0;
}

.wrap .likert:before {
    content: '';
    position: relative;
    top: 11px;
    left: 6.5%;
    display: block;
    background-color: #efefef;
    height: 4px;
}

.wrap .panas:before {
    width: 54% !important;
}

.wrap .likert li {
    display: inline-block;
    width: 13%;
    text-align: center;
    vertical-align: top;
}

.wrap .likert li input[type=radio] {
    display: block;
    position: relative;
    top: 0;
    left: 50%;
    margin-left: -6px;

}

.wrap .likert li label {
    width: 100%;
}

.wrap .buttons {
    margin: 30px 0;
    padding: 0 4.25%;
    text-align: right
}

.wrap .buttons button {
    padding: 5px 10px;
    background-color: #67ab49;
    border: 0;
    border-radius: 3px;
}

.wrap .buttons .clear {
    background-color: #e9e9e9;
}

.wrap .buttons .submit {
    background-color: #67ab49;
}

.wrap .buttons .clear:hover {
    background-color: #ccc;
}

.wrap .buttons .submit:hover {
    background-color: #14892c;
}

/*Radio Label*/
.radiobtn {
    position: relative;
    display: block;
    text-align: center;
}

.radiobtn label {
    display: block;
    background: none;
    color: #007ae6;
    border-radius: 5px;
    padding: 10px 20px;
    border: 2px solid #007ae6;
    margin-bottom: 5px;
    cursor: pointer;
    font-family: Arial, Helvetica, sans-serif;
}

.radiobtn input[type="radio"] {
    display: none;
    position: absolute;
    width: 100%;
    appearance: none;
}

.radiobtn input[type="radio"]:checked + label {
    background: #007ae6;
    color: #fff;
}

.radiobtn label:hover {
    background-color: #e6f3ff;
}

/*Error messages*/
.error {
    font-size: 20px;
    font-weight: bold;
    color: red;
}

.error_sub {
    font-size: 15px;
    font-weight: bold;
    color: red;
}

.error_question {
    display: block;
    padding: 0px 0 0 2%;
}

/* large devices */
@media (min-width: 1920px) {
    .container {
        max-width: 1600px;
    }
}

/* extra large devices */
@media screen and (min-width: 2000px) {
    .container {
        max-width: 1650px;
    }
}

.fixed-header {
    position: -webkit-sticky;
    position: fixed;
    top: 1%;
    right: 1%;
    z-index: 1;
    background-color: #004B8B;
    border: 2px solid transparent;
    border-radius: .25rem;
    padding-right: 1%;
    padding-left: 1%;
    margin-right: auto;
    margin-left: auto;
}


@media only screen and (max-width: 768px) {
    .fixed-header {
        top: 0 !important;
    }
}

/* Badge */
.badge_icon{
    max-width: 100%;
    max-height: 100%;
}

